--- a/styles/components/createProduct.module.css
+++ b/styles/components/createProduct.module.css
@@ -101,3 +101,22 @@
     border: 1px solid #eaeaea;
     border-radius: 0.25rem;
 }
+
+.leftInfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 54%;
+}
+
+.leftInfo h1{
+    margin-bottom: 5em;
+}
+
+.SpanAdd{
+    background-color: greenyellow;
+    padding:5px;
+    border-radius: 0.25rem;;
+    margin-bottom: 5em;
+    width: 50%;
+}
