--- a/styles/components/foodItem.module.css
+++ b/styles/components/foodItem.module.css
@@ -1,17 +1,17 @@
-.foodItem {
+.food-item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-right: 20px;
+    margin-right: 10px;
     cursor: pointer;
+    width: min-content;
 }
 
-.foodItem h3 {
+.food-item h3 {
     margin-bottom: 5px;
 }
 
 .food-item img {
-    width: 100%;
     height: 200px;
     object-fit: cover;
     margin-bottom: 10px;
@@ -25,7 +25,6 @@
 }
 
 .food-item p {
-    font-size: 16px;
     margin-top: 10px;
 }
 
