--- a/styles/components/home.module.css
+++ b/styles/components/home.module.css
@@ -37,3 +37,23 @@
     transform: translateY(-5px);
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
+
+.btnOrder {
+    background-color: #FFA500;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-decoration: none;
+    display: inline-block;
+    border: none;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.btnOrder:hover {
+    background-color: #FF8C00;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+}
