--- a/styles/components/profile.module.css
+++ b/styles/components/profile.module.css
@@ -30,7 +30,7 @@
     flex-direction: column;
 }
 
-.input[type="text"] {
+.input {
     font-size: 1.2rem;
     padding: 10px;
     margin-bottom: 20px;
