--- a/styles/components/orderFoodInBar.module.css
+++ b/styles/components/orderFoodInBar.module.css
@@ -6,23 +6,17 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-top: 20px;
+    background-color: #333;
 }
 
 .label {
     display: block;
     margin: 5px;
     font-weight: bold;
+    color: #fff;
 }
 
-.select {
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    width: 100%;
-    box-sizing: border-box;
-    height: 3em;
-}
-
+.select,
 .input {
     padding: 10px;
     border-radius: 5px;
@@ -30,6 +24,8 @@
     width: 100%;
     box-sizing: border-box;
     height: 3em;
+    background-color: #222;
+    color: #fff;
 }
 
 .selectedFood {
@@ -46,6 +42,8 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-bottom: 10px;
+    background-color: #444;
+    color: #fff;
 }
 
 .selectedFoodItem button {
@@ -80,22 +78,17 @@
 
 .search label {
     margin-right: 10px;
+    color: #fff;
 }
 
-.search input {
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    width: 100%;
-    box-sizing: border-box;
-}
-
+.search input,
 .search select {
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
     box-sizing: border-box;
-    margin-left: 10px;
+    color: #fff;
+    background-color: #222;
 }
 
 .button {
@@ -114,11 +107,11 @@
     background-color: #3e8e41;
 }
 
-.checkboxList{
+.checkboxList {
     display: flex;
 }
 
-.imgFood{
+.imgFood {
     width: 100%;
     height: 200px;
     object-fit: cover;
@@ -131,12 +124,52 @@
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-.checkboxListItem{
+.checkboxListItem {
+    display: flex;
     align-items: center;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-bottom: 10px;
+    background-color: #222;
+    color: #fff;
+}
+
+.checkboxInput {
+    display: none;
+}
+
+.checkboxListItem:hover {
+    background-color: #444;
+}
+
+.checkboxListItem img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.checkboxListItem p {
+    flex-grow: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-right: 10px;
+}
+
+.checkboxListItem button {
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 8px;
+    cursor: pointer;
+}
+
+.checkboxListItem button:hover {
+    background-color: #3e8e41;
 }
 
 .checkboxInput{
@@ -165,3 +198,13 @@
     width: 100%;
     height: 600px;
 }
+
+
+
+
+
+
+
+
+
+
