--- a/styles/components/orderFoodInBar.module.css
+++ b/styles/components/orderFoodInBar.module.css
@@ -3,9 +3,6 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-top: 20px;
     background-color: #333;
 }
 
@@ -199,12 +196,7 @@
     height: 600px;
 }
 
-
-
-
-
-
-
-
-
+.error{
+    color: red;
+}
 
