--- a/styles/components/orderFoodInBar.module.css
+++ b/styles/components/orderFoodInBar.module.css
@@ -1,9 +1,11 @@
+.container{
+    background-color: #333;
+}
 .form {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background-color: #333;
 }
 
 .label {
@@ -200,3 +202,20 @@
     color: red;
 }
 
+.showMe{
+    border: none;
+    background:none;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 1rem 0;
+}
+
+.link{
+    text-decoration: none;
+    color: black;
+}
