--- a/styles/components/createProduct.module.css
+++ b/styles/components/createProduct.module.css
@@ -1,14 +1,21 @@
 .container {
-    width: 100%;
-    height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 .form {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 400px;
+    padding: 2rem;
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .formGroup {
@@ -94,23 +101,14 @@
     background-color: #0063cc;
 }
 
-.container {
-    max-width: 500px;
-    margin: 0 auto;
-    padding: 2rem;
-    border: 1px solid #eaeaea;
-    border-radius: 0.25rem;
-}
+
 
 .leftInfo{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    height: 54%;
-}
-
-.leftInfo h1{
-    margin-bottom: 5em;
+    align-items: center;
+    justify-content: center;
+    margin-right: 2rem;
 }
 
 .SpanAdd{
