--- a/styles/components/profile.module.css
+++ b/styles/components/profile.module.css
@@ -4,6 +4,12 @@
     padding: 20px;
 }
 
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .profile {
     display: flex;
     align-items: center;
