--- a/styles/components/registerBar.module.css
+++ b/styles/components/registerBar.module.css
@@ -71,3 +71,10 @@
     border-radius: 4px;
     font-size: 1rem;
 }
+
+.links{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
