--- a/styles/components/profile.module.css
+++ b/styles/components/profile.module.css
@@ -122,3 +122,117 @@
     flex-direction: column;
     margin-right: 2%;
 }
+
+.foods {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-gap: 20px;
+}
+
+.food {
+    position: relative;
+}
+
+.foodName {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.foodImage {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.changeIcon {
+    position: absolute;
+    top: 3%;
+    right: 3%;
+    width: 24px;
+    height: 24px;
+    z-index: 1;
+    border-bottom: white solid 2px;
+}
+
+.delete_btn {
+    margin-top: 10px;
+    padding: 8px 16px;
+    background-color: #f44336;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+}
+
+.delete_btn:hover {
+    background-color: #d32f2f;
+}
+
+.foodImageContainer {
+    position: relative;
+    overflow: hidden;
+}
+
+.foodEditForm {
+    margin-top: 20px;
+}
+
+.foodEditForm input,
+.foodEditForm textarea,
+.foodEditForm select {
+    margin-bottom: 10px;
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.foodEditForm button {
+    margin-right: 10px;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.foodEditForm button[type="button"] {
+    background-color: #ff4f4f;
+}
+
+.deleteConfirmation {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.confirmationMessage {
+    margin-bottom: 10px;
+}
+
+.confirmationButtons {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
+}
+
+.confirmDeleteBtn,
+.cancelDeleteBtn {
+    margin-left: 10px;
+    background-color: #ff0000;
+    color: #fff;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+}
