--- a/styles/components/profile.module.css
+++ b/styles/components/profile.module.css
@@ -123,16 +123,19 @@
     margin-right: 2%;
 }
 
+.restaurants,
 .foods {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-gap: 20px;
 }
 
+.restaurant,
 .food {
     position: relative;
 }
 
+.restaurantAddress,
 .foodName {
     font-size: 16px;
     font-weight: bold;
@@ -214,6 +217,7 @@
     padding: 20px;
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    z-index: 2;
 }
 
 .confirmationMessage {
@@ -235,4 +239,16 @@
     padding: 8px 16px;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.restaurantInfo{
+    height: 100px;
+    background-color: #797474;
+    padding: 10px;
+    border-radius: 8px;
+}
+
+.nameList{
+    margin-top: 3%;
+    margin-bottom: 1%;
 }
