--- a/styles/components/orderFoodInBar.module.css
+++ b/styles/components/orderFoodInBar.module.css
@@ -27,6 +27,10 @@
     color: #fff;
 }
 
+.input::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+}
+
 .selectedFood {
     display: flex;
     flex-wrap: wrap;
@@ -205,6 +209,9 @@
 .showMe{
     border: none;
     background:none;
+    color: white;
+    padding: 5px;
+    font-size: 2em;
 }
 
 .header {
@@ -213,4 +220,8 @@
     align-items: center;
     width: 100%;
     padding: 1rem 0;
+}
+
+.selectFoodText{
+    color: white;
 }
