--- a/styles/components/orderFoodInBar.module.css
+++ b/styles/components/orderFoodInBar.module.css
@@ -225,3 +225,62 @@
 .selectFoodText{
     color: white;
 }
+
+.order{
+    color: white;
+    background-color: #222;
+    border-radius: 10px;
+    padding: 1%;
+    margin: 1% 1% -2%;
+}
+
+.orderName, .orderType, .orderCount{
+    width: 100%;
+}
+
+.orderFoods{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.listCreatedProductsFood{
+    display: flex;
+    flex-direction: column;
+    margin: 2%;
+    align-items: center;
+    width: 15em;
+    padding: 3px;
+}
+
+.listCreatedProductsFood img{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.listCreatedProductsFoodDescriptions{
+    overflow: auto;
+    text-overflow: ellipsis;
+    height: 8em;
+}
+
+.listCreatedProductsFoodDescriptions::-webkit-scrollbar {
+    width: 8px;
+    background-color: transparent;
+}
+
+.listCreatedProductsFoodDescriptions::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
+}
+
+.listCreatedProductsFoodDescriptions::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.notCreated{
+    background-color: red;
+    border-radius: 20px;
+}
